Add dynamic sitemap via Supabase Edge Function and update robots.txt

--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,16 @@ http {
             add_header Content-Type text/plain;
         }
 
+        # Proxy sitemap.xml to Supabase Edge Function
+        location = /sitemap.xml {
+            proxy_pass https://nokyneehdbmyrjmpvneu.supabase.co/functions/v1/sitemap;
+            proxy_set_header Host nokyneehdbmyrjmpvneu.supabase.co;
+            proxy_ssl_server_name on;
+            proxy_ssl_protocols TLSv1.2 TLSv1.3;
+            proxy_hide_header Access-Control-Allow-Origin;
+            add_header Access-Control-Allow-Origin *;
+        }
+
         # Static assets caching
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
