Remove Supabase dependency and switch to generic REST API client

--- a/nginx.conf
+++ b/nginx.conf
@@ -58,14 +58,11 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # Proxy sitemap.xml to Supabase Edge Function
-        location = /sitemap.xml {
-            proxy_pass https://nokyneehdbmyrjmpvneu.supabase.co/functions/v1/sitemap;
-            proxy_set_header Host nokyneehdbmyrjmpvneu.supabase.co;
-            proxy_ssl_server_name on;
-            proxy_ssl_protocols TLSv1.2 TLSv1.3;
-            proxy_hide_header Access-Control-Allow-Origin;
-            add_header Access-Control-Allow-Origin *;
+        # Proxy API requests to backend
+        location /api/ {
+            proxy_pass http://backend:3000/; # Adjust this to your actual backend service
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         # Static assets caching
