Fix: Prevent Nginx crash by using resolver for backend upstream

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,7 +60,11 @@ http {
 
         # Proxy API requests to backend
         location /api/ {
-            proxy_pass http://backend:3000/; # Adjust this to your actual backend service
+            # Use Docker's internal DNS resolver to prevent crash if backend is missing at startup
+            resolver 127.0.0.11 valid=30s;
+            set $backend_upstream http://backend:3000;
+            
+            proxy_pass $backend_upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
